android-lang/gen/com/android/tools/idea/lang/proguardR8/parser/ProguardR8Parser.java
/*
 * Copyright (C) 2019 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// ATTENTION: This file has been automatically generated from proguardR8.bnf. Do not edit it manually.

package com.android.tools.idea.lang.proguardR8.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.android.tools.idea.lang.proguardR8.psi.ProguardR8PsiTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ProguardR8Parser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType type, PsiBuilder builder) {
    parseLight(type, builder);
    return builder.getTreeBuilt();
  }

  public void parseLight(IElementType type, PsiBuilder builder) {
    boolean result;
    builder = adapt_builder_(type, builder, this, EXTENDS_SETS_);
    Marker marker = enter_section_(builder, 0, _COLLAPSE_, null);
    result = parse_root_(type, builder);
    exit_section_(builder, 0, marker, type, result, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType type, PsiBuilder builder) {
    return parse_root_(type, builder, 0);
  }

  static boolean parse_root_(IElementType type, PsiBuilder builder, int level) {
    boolean result;
    if (type == QUALIFIED_NAME) {
      result = qualifiedName(builder, level + 1);
    }
    else {
      result = root(builder, level + 1);
    }
    return result;
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(CLASS_MEMBER_NAME, CONSTRUCTOR_NAME),
  };

  /* ********************************************************** */
  // public|private|protected
  static boolean access_modifier(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "access_modifier")) return false;
    boolean result;
    result = consumeToken(builder, PUBLIC);
    if (!result) result = consumeToken(builder, PRIVATE);
    if (!result) result = consumeToken(builder, PROTECTED);
    return result;
  }

  /* ********************************************************** */
  // AT qualifiedName
  public static boolean annotation_name(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "annotation_name")) return false;
    if (!nextTokenIs(builder, AT)) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, AT);
    result = result && qualifiedName(builder, level + 1);
    exit_section_(builder, marker, ANNOTATION_NAME, result);
    return result;
  }

  /* ********************************************************** */
  // ASTERISK
  public static boolean any_field_or_method(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "any_field_or_method")) return false;
    if (!nextTokenIs(builder, ASTERISK)) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, ASTERISK);
    exit_section_(builder, marker, ANY_FIELD_OR_METHOD, result);
    return result;
  }

  /* ********************************************************** */
  // DOUBLE_ASTERISK
  public static boolean any_not_primitive_type(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "any_not_primitive_type")) return false;
    if (!nextTokenIs(builder, DOUBLE_ASTERISK)) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, DOUBLE_ASTERISK);
    exit_section_(builder, marker, ANY_NOT_PRIMITIVE_TYPE, result);
    return result;
  }

  /* ********************************************************** */
  // ANY_PRIMITIVE_TYPE_
  public static boolean any_primitive_type(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "any_primitive_type")) return false;
    if (!nextTokenIs(builder, ANY_PRIMITIVE_TYPE_)) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, ANY_PRIMITIVE_TYPE_);
    exit_section_(builder, marker, ANY_PRIMITIVE_TYPE, result);
    return result;
  }

  /* ********************************************************** */
  // ANY_TYPE_
  public static boolean any_type(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "any_type")) return false;
    if (!nextTokenIs(builder, ANY_TYPE_)) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, ANY_TYPE_);
    exit_section_(builder, marker, ANY_TYPE, result);
    return result;
  }

  /* ********************************************************** */
  // ("[" "]")+
  public static boolean array_type(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "array_type")) return false;
    if (!nextTokenIs(builder, OPEN_BRACKET)) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = array_type_0(builder, level + 1);
    while (result) {
      int pos = current_position_(builder);
      if (!array_type_0(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "array_type", pos)) break;
    }
    exit_section_(builder, marker, ARRAY_TYPE, result);
    return result;
  }

  // "[" "]"
  private static boolean array_type_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "array_type_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeTokens(builder, 0, OPEN_BRACKET, CLOSE_BRACKET);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // class_name (',' class_name)*
  static boolean class_filter(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_filter")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = class_name(builder, level + 1);
    result = result && class_filter_1(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // (',' class_name)*
  private static boolean class_filter_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_filter_1")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!class_filter_1_0(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "class_filter_1", pos)) break;
    }
    return true;
  }

  // ',' class_name
  private static boolean class_filter_1_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_filter_1_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, COMMA);
    result = result && class_name(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // ((type class_member_name) | class_member_name !(java_identifier_|<fields>|<methods>)) !'.'
  static boolean class_member_core(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_member_core")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = class_member_core_0(builder, level + 1);
    result = result && class_member_core_1(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // (type class_member_name) | class_member_name !(java_identifier_|<fields>|<methods>)
  private static boolean class_member_core_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_member_core_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = class_member_core_0_0(builder, level + 1);
    if (!result) result = class_member_core_0_1(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // type class_member_name
  private static boolean class_member_core_0_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_member_core_0_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = type(builder, level + 1);
    result = result && class_member_name(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // class_member_name !(java_identifier_|<fields>|<methods>)
  private static boolean class_member_core_0_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_member_core_0_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = class_member_name(builder, level + 1);
    result = result && class_member_core_0_1_1(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // !(java_identifier_|<fields>|<methods>)
  private static boolean class_member_core_0_1_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_member_core_0_1_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NOT_);
    result = !class_member_core_0_1_1_0(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // java_identifier_|<fields>|<methods>
  private static boolean class_member_core_0_1_1_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_member_core_0_1_1_0")) return false;
    boolean result;
    result = java_identifier_(builder, level + 1);
    if (!result) result = consumeToken(builder, _FIELDS_);
    if (!result) result = consumeToken(builder, _METHODS_);
    return result;
  }

  // !'.'
  private static boolean class_member_core_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_member_core_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NOT_);
    result = !consumeToken(builder, DOT);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // java_identifier_
  public static boolean class_member_name(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_member_name")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, CLASS_MEMBER_NAME, "<class member name>");
    result = java_identifier_(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // "!"?(public|final|abstract)
  public static boolean class_modifier(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_modifier")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, CLASS_MODIFIER, "<class modifier>");
    result = class_modifier_0(builder, level + 1);
    result = result && class_modifier_1(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // "!"?
  private static boolean class_modifier_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_modifier_0")) return false;
    consumeToken(builder, EM);
    return true;
  }

  // public|final|abstract
  private static boolean class_modifier_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_modifier_1")) return false;
    boolean result;
    result = consumeToken(builder, PUBLIC);
    if (!result) result = consumeToken(builder, FINAL);
    if (!result) result = consumeToken(builder, ABSTRACT);
    return result;
  }

  /* ********************************************************** */
  // "!"? qualifiedName
  public static boolean class_name(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_name")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, CLASS_NAME, "<class name>");
    result = class_name_0(builder, level + 1);
    result = result && qualifiedName(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // "!"?
  private static boolean class_name_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_name_0")) return false;
    consumeToken(builder, EM);
    return true;
  }

  /* ********************************************************** */
  // OPEN_BRACE java CLOSE_BRACE
  public static boolean class_specification_body(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_specification_body")) return false;
    if (!nextTokenIs(builder, OPEN_BRACE)) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, CLASS_SPECIFICATION_BODY, null);
    result = consumeToken(builder, OPEN_BRACE);
    pinned = result; // pin = 1
    result = result && report_error_(builder, java(builder, level + 1));
    result = pinned && consumeToken(builder, CLOSE_BRACE) && result;
    exit_section_(builder, level, marker, result, pinned, null);
    return result || pinned;
  }

  /* ********************************************************** */
  // annotation_name? class_modifier* class_type class_name (',' class_name)* ((extends|implements) annotation_name? super_class_name (',' super_class_name)*)?
  public static boolean class_specification_header(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_specification_header")) return false;
    boolean result, pinned;
    Marker marker = enter_section_(builder, level, _NONE_, CLASS_SPECIFICATION_HEADER, "<class specification header>");
    result = class_specification_header_0(builder, level + 1);
    result = result && class_specification_header_1(builder, level + 1);
    result = result && class_type(builder, level + 1);
    pinned = result; // pin = class_type
    result = result && report_error_(builder, class_name(builder, level + 1));
    result = pinned && report_error_(builder, class_specification_header_4(builder, level + 1)) && result;
    result = pinned && class_specification_header_5(builder, level + 1) && result;
    exit_section_(builder, level, marker, result, pinned, ProguardR8Parser::not_open_brace_or_new_flag);
    return result || pinned;
  }

  // annotation_name?
  private static boolean class_specification_header_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_specification_header_0")) return false;
    annotation_name(builder, level + 1);
    return true;
  }

  // class_modifier*
  private static boolean class_specification_header_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_specification_header_1")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!class_modifier(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "class_specification_header_1", pos)) break;
    }
    return true;
  }

  // (',' class_name)*
  private static boolean class_specification_header_4(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_specification_header_4")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!class_specification_header_4_0(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "class_specification_header_4", pos)) break;
    }
    return true;
  }

  // ',' class_name
  private static boolean class_specification_header_4_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_specification_header_4_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, COMMA);
    result = result && class_name(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // ((extends|implements) annotation_name? super_class_name (',' super_class_name)*)?
  private static boolean class_specification_header_5(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_specification_header_5")) return false;
    class_specification_header_5_0(builder, level + 1);
    return true;
  }

  // (extends|implements) annotation_name? super_class_name (',' super_class_name)*
  private static boolean class_specification_header_5_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_specification_header_5_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = class_specification_header_5_0_0(builder, level + 1);
    result = result && class_specification_header_5_0_1(builder, level + 1);
    result = result && super_class_name(builder, level + 1);
    result = result && class_specification_header_5_0_3(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // extends|implements
  private static boolean class_specification_header_5_0_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_specification_header_5_0_0")) return false;
    boolean result;
    result = consumeToken(builder, EXTENDS);
    if (!result) result = consumeToken(builder, IMPLEMENTS);
    return result;
  }

  // annotation_name?
  private static boolean class_specification_header_5_0_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_specification_header_5_0_1")) return false;
    annotation_name(builder, level + 1);
    return true;
  }

  // (',' super_class_name)*
  private static boolean class_specification_header_5_0_3(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_specification_header_5_0_3")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!class_specification_header_5_0_3_0(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "class_specification_header_5_0_3", pos)) break;
    }
    return true;
  }

  // ',' super_class_name
  private static boolean class_specification_header_5_0_3_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_specification_header_5_0_3_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = consumeToken(builder, COMMA);
    result = result && super_class_name(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  /* ********************************************************** */
  // "!"?(interface|class|enum|AT_INTERFACE)
  public static boolean class_type(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_type")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, CLASS_TYPE, "<class type>");
    result = class_type_0(builder, level + 1);
    result = result && class_type_1(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // "!"?
  private static boolean class_type_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_type_0")) return false;
    consumeToken(builder, EM);
    return true;
  }

  // interface|class|enum|AT_INTERFACE
  private static boolean class_type_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "class_type_1")) return false;
    boolean result;
    result = consumeToken(builder, INTERFACE);
    if (!result) result = consumeToken(builder, CLASS);
    if (!result) result = consumeToken(builder, ENUM);
    if (!result) result = consumeToken(builder, AT_INTERFACE);
    return result;
  }

  /* ********************************************************** */
  // qualifiedName
  public static boolean constructor_name(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "constructor_name")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, CONSTRUCTOR_NAME, "<constructor name>");
    result = qualifiedName(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // annotation_name? !method_only_modifiers fields_modifier* class_member_core
  public static boolean field(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "field")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, FIELD, "<field>");
    result = field_0(builder, level + 1);
    result = result && field_1(builder, level + 1);
    result = result && field_2(builder, level + 1);
    result = result && class_member_core(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // annotation_name?
  private static boolean field_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "field_0")) return false;
    annotation_name(builder, level + 1);
    return true;
  }

  // !method_only_modifiers
  private static boolean field_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "field_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NOT_);
    result = !method_only_modifiers(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // fields_modifier*
  private static boolean field_2(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "field_2")) return false;
    while (true) {
      int pos = current_position_(builder);
      if (!fields_modifier(builder, level + 1)) break;
      if (!empty_element_parsed_guard_(builder, "field_2", pos)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // "!"?(static|volatile|transient|final|access_modifier) !'.'
  public static boolean fields_modifier(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "fields_modifier")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, MODIFIER, "<fields modifier>");
    result = fields_modifier_0(builder, level + 1);
    result = result && fields_modifier_1(builder, level + 1);
    result = result && fields_modifier_2(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // "!"?
  private static boolean fields_modifier_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "fields_modifier_0")) return false;
    consumeToken(builder, EM);
    return true;
  }

  // static|volatile|transient|final|access_modifier
  private static boolean fields_modifier_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "fields_modifier_1")) return false;
    boolean result;
    result = consumeToken(builder, STATIC);
    if (!result) result = consumeToken(builder, VOLATILE);
    if (!result) result = consumeToken(builder, TRANSIENT);
    if (!result) result = consumeToken(builder, FINAL);
    if (!result) result = access_modifier(builder, level + 1);
    return result;
  }

  // !'.'
  private static boolean fields_modifier_2(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "fields_modifier_2")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NOT_);
    result = !consumeToken(builder, DOT);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  /* ********************************************************** */
  // (field | (annotation_name? !method_only_modifiers fields_modifier* (<fields>|any_field_or_method))) !parameters
  public static boolean fields_specification(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "fields_specification")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NONE_, FIELDS_SPECIFICATION, "<fields specification>");
    result = fields_specification_0(builder, level + 1);
    result = result && fields_specification_1(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }

  // field | (annotation_name? !method_only_modifiers fields_modifier* (<fields>|any_field_or_method))
  private static boolean fields_specification_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "fields_specification_0")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = field(builder, level + 1);
    if (!result) result = fields_specification_0_1(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // annotation_name? !method_only_modifiers fields_modifier* (<fields>|any_field_or_method)
  private static boolean fields_specification_0_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "fields_specification_0_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder);
    result = fields_specification_0_1_0(builder, level + 1);
    result = result && fields_specification_0_1_1(builder, level + 1);
    result = result && fields_specification_0_1_2(builder, level + 1);
    result = result && fields_specification_0_1_3(builder, level + 1);
    exit_section_(builder, marker, null, result);
    return result;
  }

  // annotation_name?
  private static boolean fields_specification_0_1_0(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "fields_specification_0_1_0")) return false;
    annotation_name(builder, level + 1);
    return true;
  }

  // !method_only_modifiers
  private static boolean fields_specification_0_1_1(PsiBuilder builder, int level) {
    if (!recursion_guard_(builder, level, "fields_specification_0_1_1")) return false;
    boolean result;
    Marker marker = enter_section_(builder, level, _NOT_);
    result = !method_only_modifiers(builder, level + 1);
    exit_section_(builder, level, marker, result, false, null);
    return result;
  }
